# starvax-player

./: CMakeLists.txt  README.md  player_it.ts
src/: CMakeLists.txt
src/OpenWebNet/: CMakeLists.txt  OpenWebNetEngine.cpp  OpenWebNetEngine.h  OpenWebNetEngine_IF.h  OpenWebNetFactory.cpp  OpenWebNetFactory.h  OwnFileFormatter.cpp  OwnFileFormatter.h  OwnFileLoader.cpp  OwnFileLoader.h  OwnFileParser.cpp  OwnFileParser.h  OwnItem.cpp  OwnItem.h  OwnModel.cpp  OwnModel.h
src/OpenWebNet/GUI/: CMakeLists.txt  EditModeOwnDelegate.cpp  EditModeOwnDelegate.h  OpenWebNetGUIFactory.cpp  OpenWebNetGUIFactory.h  OpenWebNetPanel.cpp  OpenWebNetPanel.h  OpenWebNetPanel.ui  OperativeOwnDelegate.cpp  OperativeOwnDelegate.h  OwnActuatorWidget.cpp  OwnActuatorWidget.h
src/application/: Action.cpp  Action.h  ActionModeFilter.cpp  ActionModeFilter.h  ApplicationFactory.cpp  ApplicationFactory.h  CMakeLists.txt  ExtAbstractListModel.h  ITimerService.h  QtTimerService.cpp  QtTimerService.h  main.cpp  testableAssert.cpp  testableAssert.h
src/dialogs/: ActionTargetSelectorDialog.cpp  ActionTargetSelectorDialog.h  ActionTargetSelectorDialog.ui  AppSettingsGui.cpp  AppSettingsGui.h  AppSettingsGui.ui  AudioVideoPlayBar.cpp  AudioVideoPlayBar.h  AudioVideoPlayBar.ui  CMakeLists.txt  LightSetEditor.cpp  LightSetEditor.h  LightSetEditor.ui  PicturePlaybar.cpp  PicturePlaybar.h  PicturePlaybar.ui  PlaylistBar.cpp  PlaylistBar.h  ScriptActionLauncher.cpp  ScriptActionLauncher.h  ScriptActionLauncher.ui  ScriptEditToolbar.cpp  ScriptEditToolbar.h  ScriptEditToolbar.ui  SearchTextBar.cpp  SearchTextBar.h  SearchTextBar.ui  ShowFileReportDialog.cpp  ShowFileReportDialog.h  ShowFileReportDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lightScene/: CMakeLists.txt  DmxInterface.h  DmxInterfaceFactory.h  IF_DmxSliderPanel.h  IF_GuiLightControlPanel.h  IF_LightEngineInterface.h  IF_lighttransitionengine.h  LightEngine.cpp  LightEngine.h  LightFunctionFactory.cpp  LightFunctionFactory.h  LightPresetData.cpp  LightPresetData.h  LightPresetFactory.cpp  LightPresetFactory.h  LightPresetModel.cpp  LightPresetModel.h  lighttransitionengine.cpp  lighttransitionengine.h
src/lightScene/DMX/: CMakeLists.txt  DmxInterface_K8062.cpp  DmxInterface_K8062.h  DmxUsb.cpp  DmxUsb.h  dmxinterfacefactory_imp.cpp
src/lightScene/GUI/: CMakeLists.txt  LevelViewForPreset.cpp  LevelViewForPreset.h  LightChannelWidget.cpp  LightChannelWidget.h  LightPresetDelegate.cpp  LightPresetDelegate.h  LightPresetPlaybar.cpp  LightPresetPlaybar.h  LightPresetPlaybar.ui  LightSlider.cpp  LightSlider.h  LightsetListView.cpp  LightsetListView.h  LightsetPainter.cpp  LightsetPainter.h  QtDmxSliderPanel.cpp  QtDmxSliderPanel.h  QtLightControlPanel.cpp  QtLightControlPanel.h  lightControlGui.ui  lightControlGuiFactory.cpp  lightControlGuiFactory.h
src/playlist/: AbstractMediaSource.h  AudioVideoSource.cpp  AudioVideoSource.h  CMakeLists.txt  ExponentialFader.cpp  ExponentialFader.h  Fader.cpp  Fader.h  IF_MediaEngineInterface.h  MediaAutomation.cpp  MediaAutomation.h  MediaEngineImp.cpp  MediaEngineImp.h  MediaEngineMdk.cpp  MediaEngineMdk.h  MediaEngineMdkSdl.cpp  MediaEngineMdkSdl.h  MediaListModel.cpp  MediaListModel.h  MediaSourceFactory.cpp  MediaSourceFactory.h  PictureSource.cpp  PictureSource.h  PlaylistConstants.h  PlaylistFunctionFactory.cpp  PlaylistFunctionFactory.h  SdlEngine.h  SdlEngineImp.cpp  SdlEngineImp.h  SdlWorkerThread.cpp  SdlWorkerThread.h  playlistPainter.cpp  playlistPainter.h
src/playlist/mediaWidgets/: CMakeLists.txt  FullScreenMediaWidget.cpp  FullScreenMediaWidget.h  FullScreenMediaWidget_IF.h  MediaListView.cpp  MediaListView.h  MediaToolbar.h  PlaylistGuiFactory.cpp  PlaylistGuiFactory.h  QMDKWindow.cpp  QMDKWindow.h  StillPictureWidget.cpp  StillPictureWidget.h  VideoWidget.cpp  VideoWidget.h  mediaPositionSlider.h  swiftslider.cpp  swiftslider.h  volumeslider.h
src/script/: CMakeLists.txt  HighLightTextViewer.cpp  HighLightTextViewer.h  IF_ActionSelectorInterface.h  IF_ScriptEngineInterface.h  IF_ScriptViewerInterface.h  ScriptActionCreator.cpp  ScriptActionCreator.h  ScriptActionTrigger.h  ScriptEngine.cpp  ScriptEngine.h  ScriptFunctionFactory.cpp  ScriptFunctionFactory.h  scriptViewer.cpp  scriptViewer.h
src/script/GUI/: ActionHoverDetection.cpp  ActionHoverDetection.h  CMakeLists.txt  ScriptGuiFactory.cpp  ScriptGuiFactory.h
src/sequencer/: CMakeLists.txt  Sequencer.h  SequencerFactory.cpp  SequencerFactory.h  Sequencer_Functionality.cpp  Sequencer_Functionality.h  Sequencer_Instruction.cpp  Sequencer_Instruction.h  Sequencer_InstructionFactory.cpp  Sequencer_InstructionFactory.h  Sequencer_InstructionFactory_IF.h  Sequencer_LineParser.cpp  Sequencer_LineParser.h  Sequencer_Runner.cpp  Sequencer_Runner.h  Sequencer_ScriptParser.cpp  Sequencer_ScriptParser.h  Sequencer_ScriptSequencer.cpp  Sequencer_ScriptSequencer.h
src/sequencer/GUI/: CMakeLists.txt  HtmlDelegate.cpp  HtmlDelegate.h  SequenceEditorGui.h  SequenceEditorGui.ui  SequenceEditorGuiQt.cpp  SequenceEditorGuiQt.h  SequencerErrorTableWidget.cpp  SequencerErrorTableWidget.h  SequencerHighlighter.cpp  (+3 more)
src/server/: CMakeLists.txt  CommandReply_IF.h  Command_IF.h  MessageEngine.h  MessageParser.cpp  MessageParser.h  NetworkCommandReply.cpp  NetworkCommandReply.h  NetworkInterface.h  NetworkInterfaceQt.cpp  NetworkInterfaceQt.h  ServerEngine.cpp  ServerEngine.h  ServerFactory.cpp  ServerFactory.h
src/show/: ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  FileInport.cpp  FileInport.h  HtmlOptimizer.cpp  HtmlOptimizer.h  IF_ShowGuiInterface.h  ShowFactory.cpp  ShowFactory.h  ShowFactory_IF.h  ShowFileFactory.cpp  ShowFileFactory.h  ShowFileFormatter.cpp  ShowFileFormatter.h  ShowFileInfo.h  ShowFileStrings.h  ShowLoader.cpp  ShowLoader.h  ShowManager.cpp  ShowManager.h  ShowWriter.cpp  ShowWriter.h  showfileparser.cpp  showfileparser.h
src/viewer/: ActionListController.cpp  ActionListController.h  ActionListPainter.cpp  ActionListPainter.h  ActionListView.cpp  ActionListView.h  CMakeLists.txt  modelViewRules.h
(+103 files in other folders)
